# flet-toy-app

./: .gitignore  README.md  Taskfile.yml  appveyor.yml  pochi-mas[mac].spec  pochi-mat-mac.spec  pyproject.toml  pytest.ini  requirements.txt  ぽっちゃま[win].spec
.github/workflows/: ci.yml
src/: main.py
src/assets/: pochi-mat.icns
tests/: test_main.py
