[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode="basic"
pythonVersion="3.13"
extraPaths=["src"]
#
[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "FAST", # FastAPI checks
  "E",    # pycodestyle
  "W",    # pycodestyle
  "F",    # Pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "N",    # pep8-naming
  "UP"    # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs,
    "N802", # function name should be lowercase
]
unfixable = [
    "F841", # unused variable
]

[tool.ruff.lint.pylint]
max-args = 6

[project]
name = "flet-toy-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.28.2",
  "ginza>=5.2.0",
  "ja-ginza>=5.2.0",
  "numpy>=2.0.2",
  "pyinstaller>=6.15.0",
  "spacy==3.8.2",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "flet-toy-app"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.macos]
entitlement."com.apple.security.files.user-selected.read-write" = true

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.2",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
